# Primality_Rust

./: .gitignore  Cargo.toml  README.md  bench_output.txt  bench_results.txt  cargo_output.txt  daily_record.txt  main.rs  rho_table.sh  s_search.sh
benches/: bigint_benchmark.rs  example.rs  kruskal_benchmarks.rs  primality.rs  sieve_primes.rs  trial_divisions.rs  wheel_primes.rs
bigint_solovay/: Cargo.toml
bigint_solovay/src/: main.rs
fermat_pseudoprime/: Cargo.toml
fermat_pseudoprime/src/: lib.rs  main.rs  search_e.rs  search_s.rs
is_it_prime/: Cargo.toml
is_it_prime/src/: main.rs
mod_pow_array/: Cargo.toml  data.txt
mod_pow_array/src/: main.rs
primality/: Cargo.toml  bench_output.txt
primality/benches/: example.rs
primality/src/: compressed_sparse_rows.rs  lib.rs  main.rs  miller_rabin.rs  sieve.rs  solovay_strassen.rs  trials.rs
primality_testing/: Cargo.toml
primality_testing/benches/: bigint_benchmarks.rs  example.rs
primality_testing/src/: baillie_psw.rs  bigint.rs  lib.rs  main.rs  miller_rabin_num.rs  miller_rabin_rug.rs  prime_search.rs  solovay_strassen.rs
pseudoprime-search/: Cargo.toml
pseudoprime-search/benches/: q_search.rs
pseudoprime-search/src/: lib.rs  main.rs
rho_table/: Cargo.toml
rho_table/benches/: hashmap_bench.rs
rho_table/src/: lib.rs  main.rs  sieve_factorize.rs  threaded_rho.rs
solovay_strassen/: Cargo.toml
solovay_strassen/src/: main.rs
src/: advanced_primality_tests.rs  big_int.rs  big_int_jacob.rs  bigint_algorithms.rs  lib.rs  main.rs  miller_rabin.rs  miller_rabin_big.rs  miller_rabin_threaded.rs  mod_pow.rs  solovay_strassen.rs  tests.rs  wheel.rs  wheel_algos.rs
src/algorithms/: miller_rabin.rs  mod.rs  sieve.rs  solovay_strassen.rs  trials.rs
src/bigint_algorithms/: mod.rs  threaded.rs  wheel_threaded.rs
src/bigint_num/: big_int_jacob.rs  miller_rabin_big.rs  miller_rabin_threaded.rs  mod.rs  mod_pow_big.rs  threaded_bigint_num.rs
src/bigint_rug/: miller_rabin_rug.rs  mod.rs  mod_pow_rug.rs  threaded_bigint_rug.rs
tests/: miller_rabin_tests.rs
threaded_algs/: Cargo.toml
threaded_algs/src/: AKS_prime.rs  baille_psw.rs  lamellar_prime_tests.rs  main.rs  threaded_solovay.rs  wheel_algos.rs
