[package]
name = "primality_tests"
version = "0.1.0"
edition = "2021"

[dependencies]
num-iter = "0.1.45"
rand = "0.8.5"
rug = {version = "1.24.1", features=["num-traits"]}

[[bench]]
name = "primality"
harness = false

[[bench]]
name = "bigint_benchmark"
harness = false

[dev-dependencies]
divan = "0.1.14"
