[package]
name = "primality"
version = "0.1.0"
edition = "2021"

[dependencies]
mod_exp = "1.0.1"
rand = "0.8.5"
num = "0.4"
num-bigint = { version = "0.4", features = ["rand"] }
num-format = "0.4.4"
rug = {version = "1.24.0", features = ["num-traits"]}
num-iter = "0.1.45"
rayon = "1.10.0"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "example"
harness = false

[[bench]]
name = "kruskal_benchmarks"
harness = false
