[package]
name = "primality_testing"
version = "0.1.0"
edition = "2021"

[dependencies]
divan = "0.1.14"
mod_exp = "1.0.1"
num = { version = "0.4.3", features = ["rand", "num-bigint"] }
rand = "0.8.5"
num-format = "0.4.4"
rug = { version = "1.24.1", features = ["serde"]}
lamellar = "0.6.1"
# lamellar = {version = "0.6.1", features = ["enable-rofi"]}
async-trait = "0.1.80"
divisors = "0.2.1"
itertools = "0.13.0"
num-prime = "0.4.4"


[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "example"
harness = false

[[bench]]
name = "bigint_benchmarks"
harness = false
